Properly detect changes in .desktop files

This fixes the shell not picking updates to the contents of the underlying
.desktop files for application launchers, or when a .desktop file is
overriden by a user-installed one under ~/.local/share/applications

A direct backport from the upstream patch was not possible, so this is an
adaptation of the fix for https://bugzilla.gnome.org/show_bug.cgi?id=773636

https://phabricator.endlessm.com/T14057